# CEval

./: .gitignore  LICENSE  README.md  ceval.cabal  report.btx
.github/workflows/: build.yml
app/: AST.hs  Evaluator.hs  Lexer.x  Main.hs  Parser.y  Tychecker.hs
