cabal-version:      3.4
name:               ceval
version:            0.0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alias Qli
maintainer:         aliasqli@qq.com
-- copyright:
category:           Language
build-type:         Simple
-- extra-source-files:

common default
    default-extensions:
        ApplicativeDo
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DerivingStrategies
        DuplicateRecordFields
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedLabels
        OverloadedStrings
        PackageImports
        PartialTypeSignatures
        PatternSynonyms
        PolyKinds
        QuasiQuotes
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeFamilyDependencies
        TypeOperators
  ghc-options: 
        -j 
        -O 
        -Wall 
        -Wcompat 
        -Wincomplete-record-updates 
        -Wredundant-constraints 
        -Wno-unused-do-bind 
        -Wno-orphans 
        -Wno-name-shadowing 
        -Wno-partial-type-signatures

executable ceval
    import:           default
    main-is:          Main.hs
    build-tool-depends: 
        alex:alex
      , happy:happy
    other-modules:
        Parser
        Lexer
        AST
        Tychecker
        Evaluator
    build-depends:    
        base >= 4.15.1.0
      , parsec
      , text
      , bytestring
      , array
      , mtl
      , containers
      , vector
      , lens
    hs-source-dirs:   app
    default-language: Haskell2010
